<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signuptitle"
            android:text="Registro de postulantes"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="20dp"
            android:drawableLeft="@drawable/figura1"/>


        <EditText
            android:id="@+id/editNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/nombre"
            android:layout_below="@id/signuptitle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:layout_marginBottom="10dp"
            android:background="@color/black"
            android:drawablePadding="20dp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/apellido"
            android:layout_below="@id/editNombre"
            android:background="@color/black"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:padding="20dp"
            android:drawablePadding="20dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:hint="@string/edad"
            android:layout_below="@id/editEdad"
            android:background="@color/black"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:padding="20dp"
            android:drawablePadding="20dp"
            android:inputType="number"/>


        <EditText
            android:id="@+id/editCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_top"
            android:text="Correo electrónico"
            android:layout_below="@id/editCorreo"
            android:background="@color/black"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:padding="20dp"
            android:drawablePadding="20dp"

            android:hint="@string/correo"/>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="218dp"
            android:layout_height="68dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="Registrar"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:background="@drawable/borde_redondo"

            />
    </LinearLayout>

</RelativeLayout>